@@ -429,6 +429,28 @@ Feature: Step - addV()
     Then the result should have a count of 1
     And the graph should return 1 for count of "g.V().hasLabel(\"person\")"
 
+ 
+  Scenario: g_addV_propertyXmapX
+    Given the empty graph
+    And the traversal of
+      """
+      g.addV().property(["name": "foo", "age": 42 ])
+      """
+    When iterated to list
+    Then the result should have a count of 1
+    And the graph should return 1 for count of "g.V().has(\"name\",\"foo\")"
+
+  Scenario: g_addV_propertyXsingle_mapX
+    Given the empty graph
+    And the traversal of
+      """
+      g.addV().property(Cardinality.single, ["name": "foo", "age": 42 ])
+      """
+    When iterated to list
+    Then the result should have a count of 1
+    And the graph should return 1 for count of "g.V().has(\"name\",\"foo\")"
+    
+
   @AllowNullPropertyValues
   Scenario: g_addVXpersonX_propertyXname_joshX_propertyXage_nullX
     Given the empty graph
